<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Errors -->
    <string name="unknown_error">Unknown error</string>
    <string name="wrong_item_type">Wrong item type</string>

    <!--    Xml string resources-->
    <string name="notes">Notes</string>
    <string name="notes_screen">Notes Screen</string>
    <string name="note_title">Note Title</string>
    <string name="note_text">Note Text</string>
    <string name="date_and_time">Date And Time</string>
    <string name="no_notes">No notes available. Click the button to add a new note.</string>
    <string name="add_note">Add Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="save_note">Save Note</string>
    <string name="exit">Exit</string>
    <string name="click_on_the_button_in_the_lower_right_corner_of_the_screen_to_create_your_first_note">Click on the button in the lower right corner of the screen to create your first note</string>
</resources>