<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/background_gradient_light">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:fontFamily="@font/ibm_plex_mono_medium_compose"
        android:background="@color/lightYellow"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_title"
                        android:padding="10dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:boxBackgroundMode="outline">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_text"
                        android:padding="10dp"
                        android:lines="15"
                        android:gravity="top" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/save_note_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibm_plex_mono_compose"
                android:backgroundTint="@color/yellow"
                android:text="@string/save_note"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/exit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibm_plex_mono_compose"
                android:backgroundTint="@color/yellow"
                android:layout_marginVertical="10dp"
                android:text="@string/exit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
