<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/notes_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:fontFamily="@font/ibm_plex_mono_medium_compose"
            android:background="@color/lightYellow"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_note" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_notes_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_on_the_button_in_the_lower_right_corner_of_the_screen_to_create_your_first_note"
        android:textSize="28sp"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_gravity="center"
        android:paddingHorizontal="16dp"/>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:backgroundTint="@color/yellow"
        android:focusable="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_note"
        android:layout_gravity="bottom|end"/>

</FrameLayout>
